# cargo-no-std

./: Cargo.toml  LICENSE-MIT  README.md  build.rs
src/: check.rs  check_source.rs  ext.rs  main.rs  util.rs  verify.rs
tests/: crate_itself.rs  crate_itself_not_test_no_std.rs  dependency_default_std.rs  detect_explict_use_std.rs  detect_explict_use_std_all_files.rs
