[package]
name = "cargo-no-std"
version = "1.0.0"
authors = [ "Carson M. <carson@pyke.io>", "Maximilian Goisser <goisser94@gmail.com>" ]
description = "Check which dependencies are & aren't no_std compatible"
keywords = [ "cargo", "no_std", "subcommand" ]
license = "MIT OR Apache-2.0"
repository = "https://github.com/pykeio/cargo-no-std"
documentation = "https://github.com/pykeio/cargo-no-std"
edition = "2018"

[dependencies]
cargo_metadata = "0.15"
serde = "1.0"
serde_json = "1.0"
colored = "2.0"
itertools = "0.10"
clap = "3.2"
glob = "0.3"
anyhow = "1.0"
syn = { version = "1.0", default-features = false, features = [ "full", "extra-traits", "parsing", "printing" ] }
quote = { version = "1.0", default-features = false }
proc-macro2 = { version = "1.0", default-features = false }
gimli = "0.26"
object = "0.29"
twoway = "0.2"
goblin = "0.5"
fallible-iterator = "0.2"
escargot = "0.5"
duct = "0.13"

[dev-dependencies]
assert_cmd = "2.0"

[features]
default = []
proc_macro_spans = [ "proc-macro2/span-locations" ]
